--- a/AspNetMvcTalk.Web/Views/web.config
+++ b/AspNetMvcTalk.Web/Views/web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="AspNetMvcTalk.Web" />
+        <add namespace="AspNetMvcTalk.Web.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
