--- a/AspNetMvcTalk.Web/packages.config
+++ b/AspNetMvcTalk.Web/packages.config
@@ -18,6 +18,8 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="MvcFlash.Core" version="2.0.1" targetFramework="net45" />
+  <package id="MvcFlash.Web" version="2.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2750" targetFramework="net45" />
   <package id="RavenDB.Client.MvcIntegration" version="2.5.2750" targetFramework="net45" />
