added WhatRoute to make menu links active.

--- a/AspNetMvcTalk.Web/AspNetMvcTalk.Web.csproj
+++ b/AspNetMvcTalk.Web/AspNetMvcTalk.Web.csproj
@@ -132,6 +132,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WebActivator.1.5.3\lib\net40\WebActivator.dll</HintPath>
     </Reference>
+    <Reference Include="WhatRoute.Core">
+      <HintPath>..\packages\WhatRoute.1.1.0\lib\net\WhatRoute.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
