--- a/AspNetMvcTalk.Web/Views/web.config
+++ b/AspNetMvcTalk.Web/Views/web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="AspNetMvcTalk.Web" />
         <add namespace="AspNetMvcTalk.Web.Models"/>
+        <add namespace="WhatRoute.Core"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
