--- a/AspNetMvcTalk.Web/packages.config
+++ b/AspNetMvcTalk.Web/packages.config
@@ -30,5 +30,6 @@
   <package id="StructureMap.MVC4" version="2.6.4.3" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
+  <package id="WhatRoute" version="1.1.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="2.0.6.1" targetFramework="net45" />
 </packages>
