--- a/AspNetMvcTalk.Web/packages.config
+++ b/AspNetMvcTalk.Web/packages.config
@@ -21,6 +21,8 @@
   <package id="MvcFlash.Core" version="2.0.1" targetFramework="net45" />
   <package id="MvcFlash.Web" version="2.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2750" targetFramework="net45" />
   <package id="RavenDB.Client.MvcIntegration" version="2.5.2750" targetFramework="net45" />
   <package id="RavenDB.Database" version="2.5.2750" targetFramework="net45" />
