--- a/AspNetMvcTalk.Web/packages.config
+++ b/AspNetMvcTalk.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
